force-app/main/default/objects/RH_Invoice__c/fields/RH_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>RH_Account_Id__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoices</relationshipLabel>
    <relationshipName>Invoices</relationshipName>
    <type>Lookup</type>
</CustomField>