force-app/main/default/objects/RH_Invoice__c/fields/RH_DueDate__c.field-meta.xml
<CustomField>
    <fullName>RH_DueDate__c</fullName>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>