force-app/main/default/objects/RH_Invoice__c/fields/RH_InvoiceDate__c.field-meta.xml
<CustomField>
    <fullName>RH_InvoiceDate__c</fullName>
    <label>Invoice Date</label>
    <type>Date</type>
</CustomField>