force-app/main/default/objects/RH_Invoice__c/fields/RH_InvoiceItem_Sum__c.field-meta.xml
<CustomField>
    <fullName>RH_InvoiceItem_Sum__c</fullName>
    <label>InvoiceItem Sum</label>
    <summarizedField>RH_Invoice_Item__c.RH_Amount__c</summarizedField>
    <summaryForeignKey>RH_Invoice_Item__c.RH_InvoiceId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>