force-app/main/default/objects/RH_Invoice__c/fields/RH_Name__c.field-meta.xml
<CustomField>
    <fullName>RH_Name__c</fullName>
    <formula>CASE( MONTH(RH_InvoiceDate__c ), 1, &apos;January&apos;,2, &apos;February&apos;,3, &apos;March&apos;,4, &apos;April&apos;,5, &apos;May&apos;,6, &apos;June&apos;,7, &apos;	July&apos;,
        8, &apos;August&apos;,9, &apos;September&apos;,10, &apos;October&apos;,11, &apos;November&apos;,12, &apos;December&apos;,&apos;NONE&apos;	) +&apos;-&apos;+  TEXT(YEAR(RH_InvoiceDate__c))</formula>
<formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
<label>Title</label>
<type>Text</type>
</CustomField>