force-app/main/default/objects/RH_Invoice__c/fields/RH_Number__c.field-meta.xml
<CustomField>
    <fullName>RH_Number__c</fullName>
    <externalId>true</externalId>
    <label>Number</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>