force-app/main/default/objects/RH_Invoice__c/fields/RH_Po__c.field-meta.xml
<CustomField>
    <fullName>RH_Po__c</fullName>
    <label>PO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>